# dotfiles

./: .codespellrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  INSTALL.sh  LICENSE.txt  README.md  README.mkd  TABS.md  agignore  archey3.cfg  bashrc  chktexrc  claude-settings.json  commit-types.md  conkyrc  convert-vim-snippets-for-nvim.py  driveignore  dunstrc  experimentation.py  fuzzy-lock.sh  gh-config.yml  gitconfig  gitignore  gnucash_api.py  gtk3-settings.ini  gvimrc  homepage.html  i3status.conf  ioi-template.cpp  ioi-template.rs  jupyter_notebook_config.py  latexmkrc  lint.sh  lisprc  nerd-dictation.py  pdbrc.py  picom.conf  prek.toml  (+26 more)
asy/: bary.asy  config.asy  cse5.asy  olympiad.asy
bat/: config
borse/: config.toml
bugwarrior/: bugwarriorrc  unhalt-if-github-updated.sh
config/: picom.conf
conky/: README.md  agenda.txt  ascii-cal.sh  ascii-clock.py  barcal.py  bootes-bar.conf  cal.conf  cal2.conf  cal3.conf  cal4.conf  cal5.conf  cali-gaming-bar.conf  clock.lua  clock0.lua  conky.conf  dijo-today.py  gcal-json-to-text.py  huge-calendar.conf  huge-calendar.py  large-calendar.conf  main-bar.conf  otis-vitals.py  power-widget.conf  prettycal.py  print-conky-agenda.sh  print-conky-future.sh  print-conky-tasks.sh  print-conky-today.sh  run-conky.sh  setup.sh  shifted-bar.conf  star-bar-bootes.conf  star-bar-majestic.conf  star-bar.conf  stats-power-widget.conf  summary-bar-1920x1080-bootes.conf  summary-bar-3840x2160-tv.conf  summary-bar-abridged-majestic.conf  summary-bar.conf  thin-bar-1920x1080.conf  (+3 more)
cp-templates/: Cargo.toml  README.md  main.cpp  main.py  main.rs
css/: GrayscaleInternet.user.js  caprine.css  discord.css  userChrome.css
custom-systemd-units/: anki-morning.service  anki-morning.timer  evansync.service  evansync.timer  even-chan.service  evil-chin.service  link.sh  mbsync.service  mosp-2021.service  motion.service  motioncam.service  sentinel.service  skynet.service
dijo/: config.toml
dot/: agignore  bashrc  eslintrc.yaml  gitconfig  gvimrc  latexmkrc  mbsyncrc  shellcheckrc  taskrc  tidyrc  xinitrc  xprofile
dunst/: dunstrc
elinks/: elinks.conf
firefox/: homepage.html
fish/: .gitignore  config.fish  fish_plugins  fish_variables  fishd.ArchAir  fishd.ArchMega  fishfile
fish-scripts/: pomodoro.fish
gm-scripts/: GrayscaleInternet.user.js  MoreGrader.user.js
gnucash/: README.md  gnucash_api.py  scrape_citi.py  scrape_techcu.py
gnucash-txn-import/: .gitignore  Makefile  README.md  audit.py  experimentation.py  gnucash_api.py  import-recent.sh  scrape-xml.py  scrape_boa.py  scrape_citi.py  scrape_paypal.py  scrape_techcu.py  txn.py
host-config/: otis  pacman
i3/: Makefile  app-icons.json  config  extras.ArchBootes  extras.ArchDiamond  extras.ArchMajestic  extras.ArchSapphire  extras.ArchScythe  extras.dagobah  list-used-keys.py  list-used-keys.sh  reminder-config.sh  reminder-danger.sh  reminder-exec.sh  reminder-nudge.sh  reminder-ponymix.sh  tagline  toggle-horizontal-gaps.sh
lualatex-font-catalog/: .gitignore  compile-latex.sh  make-latex-document.py  reload-cache.sh  write-font-list.sh
miqin/: config.toml
mirage_linemode/: mirage_linemode_config.yml  mirage_linemode_theme.yml
misc/: archey3.cfg  banner  notes.md  pytex-latexmkrc  userChrome.css
mutt/: mailcap  mbsyncrc  mutt-markdown.py  muttrc.0  muttrc.1  muttrc.2  muttrc.common  muttrc.x  neomuttrc  neomuttrc.2  open-mail.sh  signature
ncdu/: config
notes/: ArchDiamond.md  commit-types.md
nvim/: .gitignore  coc-settings.json  ginit.vim  init.lua  lazy-lock.json  lazyvim.json
py-scripts/: .gitignore  aur-auto-vote-with-chaotic.py  badwrap.py  blue-bubble-notif.py  cal2discord.py  convert-vim-snippets-for-nvim.py  ctwenty.py  de-macro  demacro-private.sty  demacro.py  dropbox.py  export-ggb-clean-asy.py  gen-password.py  get-cal-helper.py  grade.py  hunt.py  jpc.py  latex-itemizer.py  latex-itemzer.py  latex2wp.py  latex2wpstyle.py  mangle.py  mango.py  markdown2wp.py  odus.py  orch.py  oscar.py  projtext.py  protext.py  putnam.py  query-twitch-online.py  sane_markdown.py  solvertools-search.py  stomp.py  teach.py  toddle.py  tsq.py  tsqx.py  uclean.py  utf-clean.py  (+6 more)
py3status/: .gitignore  Makefile  main.conf  order.ArchAir.conf  order.ArchAngel.conf  order.ArchBootes.conf  order.ArchDiamond.conf  order.ArchMagnet.conf  order.ArchMajestic.conf  order.ArchMillie.conf  order.ArchSapphire.conf  order.ArchScythe.conf  order.ArchUmi.conf  order.dagobah.conf  order.star.conf  tagline
pyscripts/: demacro.py  dropbox.py  jpc.py  latex2wp.py  tsq.py
qutebrowser/: .gitignore  autoconfig.yml  config.py  keys.conf  qutebrowser.conf
ranger/: commands.py  commands_full.py  rc.conf  rifle.conf  scope.sh
rofi/: config.rasi
security/: .gitignore  motion.conf  run.sh
sentinel/: .gitignore  motion.conf  motion.sh  pyproject.toml  sentinel.py  sentinel.sh  trigger.py
sentinel/templates/: base.html  index.html  login.html  output.html
sh-scripts/: .gitignore  chvol.sh  claude-sandbox.sh  clip-type.sh  conky-out.sh  cron.sh  erase-mail.sh  fuzzy-lock.sh  get-cal.sh  get-todo.sh  getclip.sh  ggb-to-asy.sh  git-complete.sh  git-prompt.bash  git-prompt.sh  grab-password-from-vault.sh  guten-targets-git.sh  hangul.sh  hotspot.sh  ipad-monitor.sh  ipad_monitor.sh  lock-warning.sh  mouse-buttons.sh  nerd-dictate.sh  noisemaker.sh  opony.sh  pacsnap.sh  paswitch.sh  print-conky-agenda.sh  push-to-prod.sh  redo-keys.sh  redshift.sh  rename-sc2replays.sh  run-dijo.sh  save-bitwarden-password.fish  shrinkpdf.sh  soundboard.sh  startup.sh  task-update.sh  tw-rofi.sh  (+4 more)
skynetsys/: .gitignore  motion.conf  motion.sh  pyproject.toml  run.sh  sentinel.py  sentinel.sh  skynet.py  trigger.py
terminal/: terminalrc
tw-hooks/: LICENSE.md  README.md  on-add-pirate  on-modify-pirate
vale-styles/: .gitignore
venueQ/: .gitignore  README.md  README.mkd  otis.py  pyproject.toml  requirements.txt  venue.py  venueQ.py  venueQ.vim
vim/: .gitignore  README.mkd  coc-installed.json  coc-package.json  coc-settings.json  proselintrc  vimrc  vimrc.min
(+311 files in other folders)
